import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

version = '1.0'
project.ext {
    type = "server"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11) // Choose your target version
    }
}

tasks.withType(KotlinCompile).configureEach {
    kotlinOptions {
        jvmTarget = "11" // Match the Java version above
    }
    run {
        jvmArgs = ['-Djdk.attach.allowAttachSelf=true']
    }
}

apply plugin: 'application'
apply plugin: 'kotlin'

compileKotlin {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

dependencies {
    implementation project(':kronos-api')
    implementation 'com.google.api-client:google-api-client:1.33.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation group: 'com.typesafe', name: 'config', version:'1.3.1'
    implementation group: 'net.dv8tion', name: 'JDA', version: '5.5.1'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.12.2'
    implementation group: 'io.undertow', name: 'undertow-core', version: '1.4.18.Final'
    implementation 'com.mashape.unirest:unirest-java:1.4.9'
    //implementation group: 'de.brudaswen.kotlinx.coroutines', name: 'kotlinx-coroutines-swt', version: '1.0.0'
    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.3.7'
    implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version:'1.3.21'
    implementation group: 'com.ea.agentloader', name: 'ea-agent-loader', version: '1.0.3'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'
    implementation 'org.db4j:kilim:2.0.1'
}

application {
    mainClass.set('io.ruin.Server')
}
